# lab_sql_DE25_johnny_hyytiainen

./: .gitignore  README.md  pyproject.toml  test_black.py
dashboard/: .gitignore  package-lock.json
dashboard/pages/: check_data.md  index.md
dashboard/sources/lab_database/: actors.sql  connection.yaml  monthly_revenue.sql  revenue_per_genre.sql  store_performance.sql  top_customers.sql  underperforming_films.sql
docs/: SQL_lab_visuals.md  notes.md
notebooks/: lab_sql_sakila_EDA.ipynb  sanity_check.ipynb
sql/: eda_queries.sql
src/lab_sql_de25_johnny_hyytiainen/: __init__.py  ingest_sakila_dlt.py
